# rust-for-c-sharp-devs

./: Cargo.toml
src/: error.rs  main.rs  utils.rs
src/controller/: todo.rs
src/db/: mongo.rs
src/handler/todo/: create.rs  delete.rs  get.rs  mod.rs  update.rs
src/model/: mod.rs  todo.rs
src/model/request/todo/: create.rs  update.rs
src/model/response/: web.rs
src/repo/todo/: impls.rs  traits.rs
src/service/: todo.rs
